WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
75225
Fix a crash in WebProcess when starting a download not initiated by a WebPage
https://bugs.webkit.org/show_bug.cgi?id=75225
Summary
Fix a crash in WebProcess when starting a download not initiated by a WebPage
Carlos Garcia Campos
Reported
2011-12-26 04:13:56 PST
This crash was introduced in
r101607
, the patch assumes initiatingPage can't be NULL.
Attachments
Patch to fix the crash
(1.44 KB, patch)
2011-12-26 04:16 PST
,
Carlos Garcia Campos
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2011-12-26 04:16:01 PST
Created
attachment 120548
[details]
Patch to fix the crash
Carlos Garcia Campos
Comment 2
2011-12-26 07:58:30 PST
Committed
r103686
: <
http://trac.webkit.org/changeset/103686
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug