Fix a crash in WebProcess when starting a download not initiated by a WebPage https://bugs.webkit.org/show_bug.cgi?id=75225

Reviewed by Darin Adler.

* WebProcess/WebProcess.cpp:
(WebKit::WebProcess::downloadRequest): Check initiatingPage is not
NULL before using it.

Canonical link: https://commits.webkit.org/91991@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103686 268f45cc-cd09-0410-ab3c-d52691b4dbfc