Source/WebKit2/WebProcess/WebProcess.cpp
@@ -960,7 +960,8 @@ void WebProcess::downloadRequest(uint64_t downloadID, uint64_t initiatingPageID,
     WebPage* initiatingPage = initiatingPageID ? webPage(initiatingPageID) : 0;
 
     ResourceRequest requestWithOriginalURL = request;
-    initiatingPage->mainFrame()->loader()->setOriginalURLForDownloadRequest(requestWithOriginalURL);
+    if (initiatingPage)
+        initiatingPage->mainFrame()->loader()->setOriginalURLForDownloadRequest(requestWithOriginalURL);
 
     DownloadManager::shared().startDownload(downloadID, initiatingPage, requestWithOriginalURL);
 }
